# zombie

./: .gitignore  README.md  build.py  hamsa.config  pyproject.toml
src/: hand.py  main.py  zombie.py
src/binding/: binder.cpp
src/cpp/: Hand.cpp  Hand.h  SCServo.cpp  SCServo.h  Serial.cpp  Serial.h  main.cpp
