[tool.poetry]
name = "zombie"
version = "0.1.0"
description = ""
authors = ["Jan Nissen <jnis23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
pybind11 = "^2.13.6"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "pybind11"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true
